--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    
+    <h1>Welcome</h1>
+    <h2>My name is Darien</h2>
+    <script>
+      
+    </script>
   </body>
 </html>
