--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Welcome</h1>
+    <h1 id="header">Welcome</h1>
     <h2>My name is Darien</h2>
     <script>
       
