--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Darien's site</title>
+    <style>
     <link rel="stylesheet" href="index.css">
+    </style>
   </head>
   <body>
     <h1 id="header">Welcome</h1>
