--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Darien's site</title>
     <style>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     </style>
   </head>
   <body>
