--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <h1 id="header">Welcome</h1>
-    <h2>My name is Darien</h2>
+    <h2 id="intro">My name is Darien</h2>
+    <h4 id="age">I am 10 years old</h4>
+    <div class="hobby" id="code">
+      <p>My favorite thing to do is code. you can check out my <a href="https://github.com/darienlabs/">Github account</a> using the link. Coding is how I made this web site <strong>ALL BY MYSELF</strong>.  I know <ul><li>python</li><li>javascript</li><li>and tiny bits of swift
+      </li></ul></p>
+    </div>
     <script>
       
     </script>
