--- a/tictactoe.html
+++ b/tictactoe.html
@@ -70,6 +70,6 @@
         }
       }
     </script>
-    <a href="darienlabs.github.io">back</a>
+    <br><a href="darienlabs.github.io">back</a>
   </body>
 </html>
