--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>My favorite thing to do is code. you can check out my <a href="https://github.com/darienlabs/">Github account</a> using the link. Coding is how I made this web site <strong>ALL BY MYSELF</strong>.  I know <ul><li>python</li><li>javascript</li><li>and tiny bits of swift
       </li></ul></p>
     </div>
-    <img src="code.jpg">
+    <img src="code.jpg" alt="a computer showing JavaScript" id="code">
     <script>
       
     </script>
